--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                                 <ul>
                                     <li><a class="image-popup" href="assets/images/work/pigdice.png"><i
                                                 class="lni-plus"></i></a></li>
-                                    <li><a href="https://github.com/BrianNgeno/pig_dice" target="blank"><i
+                                    <li><a href="https://brianngeno.github.io/pig_dice/" target="blank"><i
                                                 class="lni-link"></i></a></li>
                                 </ul>
                             </div>
@@ -378,7 +378,7 @@
                                 <ul>
                                     <li><a class="image-popup" href="assets/images/work/insta.png"><i
                                                 class="lni-plus"></i></a></li>
-                                    <li><a href="https://github.com/BrianNgeno/Insta-gram" target="blank"><i
+                                    <li><a href="https://gram-likes.herokuapp.com/" target="blank"><i
                                                 class="lni-link"></i></a></li>
                                 </ul>
                             </div>
@@ -396,7 +396,7 @@
                                 <ul>
                                     <li><a class="image-popup" href="assets/images/work/github.png"><i
                                                 class="lni-plus"></i></a></li>
-                                    <li><a href="https://github.com/BrianNgeno/Ghpages_Api" target="blank"><i
+                                    <li><a href="https://brianngeno.github.io/Ghpages_Api/user" target="blank"><i
                                                 class="lni-link"></i></a></li>
                                 </ul>
                             </div>
@@ -414,7 +414,7 @@
                                 <ul>
                                     <li><a class="image-popup" href="assets/images/work/news.png"><i
                                                 class="lni-plus"></i></a></li>
-                                    <li><a href="https://github.com/BrianNgeno/news-api" target="blank"><i
+                                    <li><a href="https://news-highlight-api.herokuapp.com/" target="blank"><i
                                                 class="lni-link"></i></a></li>
                                 </ul>
                             </div>
